--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
